@@ -1,4 +1,5 @@
 * Release 6.0.0
+	* Fixed Bug #140: The get_cache function has swapped fields
 	* Fixed Bug #142: Remove empty and zeroed fields
 	* Fixed Bug #115: Missing data on Ryzen CPUs
 	* Fixed Bug #122: Rename fields to be more clear
